# CS661-project

./: Makefile  README.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  data_service.py  main.py  schemas.py
backend/scripts/: migrate_data.py
backend/tests/: test_categorisation.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/atlas/: page.tsx
frontend/app/compose/: page.tsx
frontend/components/: Comparison.tsx  DistrictAnalysis.tsx  GeoChoropleth.tsx  Plot.tsx  StateAnalysis.tsx  ui.tsx
frontend/lib/: api.ts  format.ts
frontend/scripts/: build-topojson.js
frontend/styles/: globals.css
